fix: text align ()

--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -118,7 +118,7 @@ body {
     transition: .7s;
     position: absolute;
     visibility: hidden;
-    bottom: -2.2em;
+    bottom: -2.1em;
     font-size: 1.4em;
 }
 
